# lola

./: CLAUDE.md  FEEDBACK.md  README.md  pyproject.toml
specs/: module-instructions.md
specs/001-mod-init-template/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-mod-init-template/contracts/: cli-interface.md  template-files.md
src/lola/: converters.py  exceptions.py  frontmatter.py  install.py  mod.py  models.py  parsers.py  targets.py
src/lola/cli/: install.py  mod.py
src/lola/market/: manager.py
src/lola/targets/: __init__.py  base.py  gemini.py  install.py
tests/: conftest.py  test_agents.py  test_cli_install.py  test_cli_mod.py  test_config.py  test_converters.py  test_generator.py  test_installer.py  test_market_manager.py  test_models.py  test_targets.py
